--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         required>
         <input type="submit" value="Log In">
     </form>
+    <h1 id="greeting" class="hidden"></h1>
+
+
     <script src="app.js"></script>
 </body>
 </html>
