--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form id="login-form">
+    <form class="hidden" id="login-form" >
         <input type="text" 
         placeholder="What is your name?" 
         maxlength="15"
