--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         required>
         <input type="submit" value="Log In">
     </form>
+    <h2 id="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
-
-
-    <script src="app.js"></script>
+    
+    <script src="js/greeting.js"></script>
+    <script src="js/clock.js"></script>
 </body>
 </html>
